Added Skills Section (section 3)

--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,13 @@ a{
 .about{
     display: flex;
     justify-content: center;
-    padding: 10rem 0 5rem 0;
+    padding: 8rem 0 5rem 0;
     gap: 9rem;
 }
 .about-img{
     background: url('./img/Rabbithole-Typography.svg');
-    width: 400px;
-    height: 400px;
+    width: 450px;
+    height: 450px;
     position: relative;
     background-size: contain;
     background-repeat: no-repeat;
@@ -59,27 +59,63 @@ a{
     }
 }
 .about-dec{
-    width: 70rem;
+    width: 75rem;
     font-family: 'Ibarra Real Nova',serif;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 .about-dec h2{
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: bolder;
 }
 .about-dec p{
-    font-size: 1.7rem;
+    font-size: 2rem;
 }
 .ab-color{
     color: #0586ca;
 }
 
 .dividor{
-    width: 63%;
+    width: 70%;
     margin: auto;
-    border-top: 2px dotted rgb(143, 143, 143);
+    border-top: 2px dotted rgb(192, 192, 192);
 }
 
 /* Skills (Section 3) CSS */
+.skill{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+}
+.skill h3{
+    font-size: 3.5rem;
+    font-family: 'Ibarra Real Nova',serif;
+    font-weight: bolder;
+}
+.s-block{
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.skill-block{
+    width: 45%;
+    display: flex;
+    margin: 3rem;
+    gap: 2rem;
+}
+.skill-block img{
+    width: 25%;
+    height: 100%;
+}
+.skill-block h3{
+    font-size: 2.5rem;
+    font-weight: 1px !important;
+}
+.skill-block p{
+    font-size: 1.8rem;
+    margin-top: 2rem;
+}
