--- a/styles.css
+++ b/styles.css
@@ -50,14 +50,17 @@ a{
 .about{
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 8rem 0 5rem 0;
-    gap: 9rem;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 .about-img{
+    flex: 40%;
     background: url('./img/Rabbithole-Typography.svg');
-    width: 450px;
-    height: 450px;
-    position: relative;
+    max-width: 30%;
+    height: auto;
+    margin-right: 10rem;
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -84,19 +87,16 @@ a{
     }
 }
 .about-dec{
-    width: 75rem;
+    flex: 60%;
+    max-width: 62rem;
     font-family: 'Ibarra Real Nova',serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: initial;
 }
 .about-dec h2{
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-weight: bolder;
 }
 .about-dec p{
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: rgb(105, 105, 105);
 }
 .ab-color{
@@ -116,8 +116,8 @@ a{
     align-items: center;
     margin-top: 4rem;
 }
-.skill h3{
-    font-size: 3.5rem;
+.fs{
+    font-size: 3rem;
     font-family: 'Ibarra Real Nova',serif;
     font-weight: bolder;
 }
@@ -139,12 +139,12 @@ a{
     height: 100%;
 }
 .skill-block h3{
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
     font-family: 'Ibarra Real Nova',serif;
-    font-weight: 1px !important;
+    font-weight: 3px;
 }
 .skill-block p{
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-family: 'Ibarra Real Nova',serif;
     margin-top: 2rem;
     color: rgb(105, 105, 105);
@@ -162,12 +162,12 @@ a{
 }
 #portfolio h3{
     padding-top: 6rem;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-family: 'Ibarra Real Nova',serif;
     font-weight: bolder;
 }
 .porttext{
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-family: 'Ibarra Real Nova',serif;
     padding-top: 1.5rem;
     color: rgb(105, 105, 105);
@@ -195,7 +195,10 @@ a{
     .about{
         flex-direction: column-reverse;
         align-items: center;
-        text-align: justify;
+        /* text-align: justify; */
+    }
+    .about-img{
+        max-width: 100%;
     }
     .water-mark{
         display: none;
