--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,27 @@ html{
 }
 
 /* Navigation bar CSS */
-/* nav{
-    position: absolute;
+nav{
+    position: fixed;
     width: 100%;
-    height: 3rem;
-    background-color: blue;
+    height: 4rem;
+    background-color: rgb(231, 231, 231);
+    z-index: 999;
+    text-align: center;
+    padding-top: 1.5rem;
+    opacity: .2;
 }
-.show-sr{
-    top:-70px;
-    opacity:0;
-} */
+
+nav a{
+    font-size: 2rem;
+    margin-right: 4rem;
+    text-decoration: none;
+    color: #63645F;
+}
+nav a:hover{
+    color: skyblue;
+}
+
 
 /* Water Mark CSS */
 .water-mark{
@@ -65,12 +76,10 @@ a{
     background-repeat: no-repeat;
 }
 .anime{
-    /* position: absolute; */
     animation-name: updown;
     animation-duration: 3s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-    /* animation: updown 2s linear 0 infinite; */
 }
 @keyframes updown {
     0%{
@@ -122,17 +131,16 @@ a{
     font-weight: bolder;
 }
 .s-block{
-    width: 70%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     align-items: baseline;
+    width: 70%;
 }
 .skill-block{
-    width: 45%;
+    width: 50%;
     display: flex;
-    margin: 3rem;
     gap: 2rem;
+    padding: 3rem;
 }
 .skill-block img{
     width: 25%;
@@ -193,6 +201,18 @@ a{
     font-size: 1.5rem;
     font-family: 'Ibarra Real Nova',serif;
 }
+.martop1{
+    margin-top: 20px;
+}
+.martop2{
+    margin-top: 40px;
+}
+.martop1-1{
+    margin-top: -40px;
+}
+.martop2-2{
+    margin-top: -20px;
+}
 
 /* Footer (section 5) CSS */
 #footer{
@@ -210,9 +230,9 @@ a{
 
 /* Some Media Queries in CSS */
 @media (max-width:980px) {
-    html{
+    /* html{
         font-size: 50%;
-    }
+    } */
     .about{
         flex-direction: column-reverse;
         align-items: center;
@@ -224,5 +244,17 @@ a{
     .water-mark{
         display: none;
     }
+    .martop1-1, .martop1, .martop2-2, .martop2{
+        margin-top: 0;
+    }
 
+}
+@media (max-width:1100px) {
+    .s-block{
+        flex-direction: column;
+    }
+    .skill-block{
+        width: 100%;
+    }
+    
 }
