--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,34 @@ html{
 nav{
     position: fixed;
     width: 100%;
-    height: 4rem;
-    background-color: rgb(231, 231, 231);
+    height: 5rem;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 10px 5px 5px rgb(209, 209, 209);
     z-index: 999;
     text-align: center;
     padding-top: 1.5rem;
-    opacity: .2;
+    padding-bottom: 1.5rem;
+    opacity: 0;
+    animation-duration: .5s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
 }
-
+@keyframes shownav {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+@keyframes hidenav {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
 nav a{
     font-size: 2rem;
     margin-right: 4rem;
