--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ nav{
     width: 100%;
     height: 5rem;
     background-color: rgb(255, 255, 255);
-    box-shadow: 10px 5px 5px rgb(209, 209, 209);
+    box-shadow: 10px 5px 5px rgb(230, 230, 230);
     z-index: 999;
     text-align: center;
     padding-top: 1.5rem;
@@ -41,7 +41,7 @@ nav{
     }
 }
 nav a{
-    font-size: 2rem;
+    font-size: 1.6rem;
     margin-right: 4rem;
     text-decoration: none;
     color: #63645F;
@@ -87,7 +87,6 @@ a{
     margin-right: 15%;
 }
 .about-img{
-    flex: 40%;
     background: url('./img/Rabbithole-Typography.svg');
     max-width: 30%;
     height: auto;
@@ -116,7 +115,6 @@ a{
     }
 }
 .about-dec{
-    flex: 60%;
     max-width: 62rem;
     font-family: 'Ibarra Real Nova',serif;
 }
@@ -276,5 +274,7 @@ a{
     .skill-block{
         width: 100%;
     }
-    
+    nav{
+        display: none;
+    }
 }
